# midi-processing

./: .gitignore  README.md  documentation_spec.md  identity.py  main.py  midi_processor.py  no_chords.py  pyproject.toml  requirements.txt  swing.py  swing_r.py  tempo_integrator.py
helpers/: midi_processor.py  utils.py
midi_processor/: __init__.py  midi_processor.py  utils.py
