[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["midi_processor"]

[project]
name = "midi_processor"
description = "A Python package meant for processing MIDI files in a programmer-friendly way."
version = "2.2"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
authors = [
    {name = "i-win"}
]
dependencies = [
    "mido~=1.3.2"
]
[project.urls]
repository = "https://github.com/i-winxd/midi-processing"


